Add FontFamily Property

--- a/Maui.NullableDateTimePicker.Samples.Net8/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples.Net8/MainPage.xaml
@@ -31,7 +31,8 @@
                  HorizontalOptions="Start"
                  CornerRadius="5"
                  Padding="5,0,5,0"
-                 Is12HourFormat="{Binding Is12HourFormat}" />
+                 Is12HourFormat="{Binding Is12HourFormat}"
+                 TextColor="Red"/>
 
             <Button
                 x:Name="CounterBtn"
