Placeholder text and color added.

--- a/Maui.NullableDateTimePicker.Samples.Net8/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples.Net8/MainPage.xaml
@@ -31,6 +31,7 @@
                  HorizontalOptions="Start"
                  CornerRadius="5"
                  Padding="5,0,5,0"
+                 Placeholder="Enter date"
                  Is12HourFormat="{Binding Is12HourFormat}"
                  />
 
