NullableDateTimePickerOptions: AppThemeColor for each color parameter + Border and corner radius

--- a/Maui.NullableDateTimePicker.Samples/NewPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/NewPage.xaml
@@ -20,6 +20,11 @@
         HorizontalOptions="Start" />
 
         <Button
+          Text="Select a date from calendar popup" 
+          Clicked="Button_Clicked"
+          HorizontalOptions="Center" />
+
+        <Button
         Text="Close modal" 
         Clicked="OnCloseClicked"
         HorizontalOptions="Fill" />
