--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:Maui.NullableDateTimePicker.Samples"
              xmlns:ndtp="clr-namespace:Maui.NullableDateTimePicker;assembly=Maui.NullableDateTimePicker"
              x:Class="Maui.NullableDateTimePicker.Samples.MainPage"
-             BackgroundColor="AliceBlue">
+             BackgroundColor="AliceBlue"
+             x:DataType="local:MainPage">
     <ScrollView>
         <VerticalStackLayout
             Spacing="25"
@@ -35,7 +37,7 @@
                             Padding="5,0,5,0"
                             SelectedDayStyle="{StaticResource SelectedDayStyle}" />
 
-            <Label Text="Datepicker with border" TextColor="Black" />
+            <Label Text="Datepicker control with border + popup with border" TextColor="Black" />
 
             <ndtp:NullableDateTimePicker NullableDateTime="{Binding MyDateTime}"  
                                         Mode="Date"
@@ -47,6 +49,10 @@
                                         BorderWidth="1"
                                         CornerRadius="5"  
                                         Padding="5,0,0,0"
+                                        PopupBorderColor="{AppThemeBinding Light=Black, Dark=White}"
+                                        PopupBorderWidth="1"
+                                        PopupCornerRadius="10"
+                                        PopupPadding="5"
                                             />
 
             <Label Text="Timepicker" TextColor="Black" />
