--- a/Maui.NullableDateTimePicker.Samples/NewPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/NewPage.xaml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:Maui.NullableDateTimePicker.Samples"
              xmlns:ndp="clr-namespace:Maui.NullableDateTimePicker;assembly=Maui.NullableDateTimePicker"
              x:Class="Maui.NullableDateTimePicker.Samples.NewPage"
+             x:DataType="local:NewPage"
              Title="NewPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Close" Command="{Binding CloseModalCommand}"/>
+    </ContentPage.ToolbarItems>
     <VerticalStackLayout
         Padding="30,0"
         Spacing="25">
@@ -23,10 +28,5 @@
           Text="Select a date from calendar popup" 
           Clicked="Button_Clicked"
           HorizontalOptions="Center" />
-
-        <Button
-        Text="Close modal" 
-        Clicked="OnCloseClicked"
-        HorizontalOptions="Fill" />
     </VerticalStackLayout>
 </ContentPage>
