--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -68,6 +68,7 @@
      CornerRadius="5"
      Padding="5,0,5,0"
      Placeholder="Enter date"
+     PlaceholderColor="Blue"
      Is12HourFormat="{Binding Is12HourFormat}"
      />
 
