--- a/Maui.NullableDateTimePicker.Samples/MainPage.xaml
+++ b/Maui.NullableDateTimePicker.Samples/MainPage.xaml
@@ -15,6 +15,7 @@
             Padding="30,0"
             VerticalOptions="Fill">
 
+
             <Label Text="Maui Nullable and Clearable DateTimePicker Examples" FontSize="16" FontAttributes="Bold" VerticalOptions="Center" TextColor="Black" />
 
             <HorizontalStackLayout VerticalOptions="Center">
@@ -66,6 +67,7 @@
                                         ShowOtherMonthDays="False"
                                         HorizontalOptions="Start"
                                         Padding="5,2.5"
+                                         Is12HourFormat="True"
                                         ActivityIndicatorColor="{StaticResource Yellow200Accent}"
                                         />
             <Label Text="Timepicker 12 hour format" TextColor="Black" />
@@ -94,7 +96,7 @@
                                 Text="{Binding MyDateTime, StringFormat='{0:g}'}"
                                IsReadOnly="True"
                                 TextColor="{AppThemeBinding Light=Black, Dark=White}"
-                               VerticalOptions="CenterAndExpand" BackgroundColor="Transparent" />
+                               VerticalOptions="Center" BackgroundColor="Transparent" />
 
                         <ImageButton Grid.Column="1"
                                      VerticalOptions="Center"
