--- a/Maui.NullableDateTimePicker/Controls/ButtonTemplate.xaml
+++ b/Maui.NullableDateTimePicker/Controls/ButtonTemplate.xaml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Maui.NullableDateTimePicker.Controls.GroupedButtonTemplate" Margin="0">
+             x:Class="Maui.NullableDateTimePicker.Controls.ButtonTemplate" 
+             Margin="0"
+             x:ClassModifier="NotPublic">
 
 
     <Border
