- Fixed freeze issue in ClockView: previously, if SelectedDate was null, changing the hour, minute, or AM/PM selection would cause the application to hang. - Added ability to set custom text for Hour/Minute toggle button.

--- a/Maui.NullableDateTimePicker/Controls/ClockView.xaml
+++ b/Maui.NullableDateTimePicker/Controls/ClockView.xaml
@@ -21,14 +21,16 @@
                     Text="AM"
                     Clicked="OnAmPmToggleButtonClicked" 
                     StrokeShape="{StaticResource RoundedShape}"
-                    VisualState="Normal" />
+                    VisualState="Normal"
+                    HorizontalOptions="Fill" />
 
             <!-- Hour/Minute Button -->
             <drawables:ButtonTemplate x:Name="HourMinuteToggleButton"
-                Text="H"
+                Text="Hour ↔ Minute"
                 Clicked="OnHourMinuteToggleButtonClicked" 
                 StrokeShape="{StaticResource RoundedShape}"
-                VisualState="Normal" />
+                VisualState="Normal"
+                HorizontalOptions="Fill" />
 
         </StackLayout>
         <GraphicsView x:Name="graphicsView"
